--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,422 @@
+:root {
+  --text: #ffffff;
+  --background: #000000;
+  --primary: #688559;
+  --secondary: #0f0b0b;
+  --accent: #608585;
+
+}
+
+.light{
+  background: rgb(255,255,255);
+  background: radial-gradient(circle, rgba(255,255,255,0.1) 0%, rgba(0,0,0,.8) 50%);
+  height: 99vh;
+  width: 99vw;
+  position: fixed;
+  outline: auto;
+  z-index: 100;
+}
+
+nav{
+  position: fixed;
+  display: flex;
+  align-items: center;
+  padding-top: 1%;
+  left: 1;
+  height: 8vh;
+  width: 99vw;
+  z-index: 100;
+  background: rgba(0, 0, 0, 0.21);
+  border-radius: 16px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(6.1px);
+  -webkit-backdrop-filter: blur(6.1px);
+  border: 1px solid rgba(0, 0, 0, 0.36);
+}
+
+nav h2{
+  color: var(--text);
+  margin-left: 2%;
+  text-align: left;
+  text-wrap: 1;
+  font-weight: 100;
+  font-weight: bolder;
+  letter-spacing: .09vw;
+}
+
+.logo{
+  margin-left: 10%;
+  height: 100%;
+}
+
+nav ul{
+  display: flex;
+  list-style: none;
+  margin-left: 45%;
+  gap: .5vw;
+}
+
+nav button{
+  border-radius:5%;
+  background: rgba(255, 255, 255, 0.21);
+  border-radius: 16px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(6.1px);
+  -webkit-backdrop-filter: blur(6.1px);
+  border: 1px solid rgba(255, 255, 255, 0.36);
+  cursor:pointer;
+  font-family:Arial;
+  font-size:17px;
+  text-decoration:none;
+  text-shadow:0px 1px 0px #2f6627;
+  width: 5vw;
+  height: 1.5vw;
+  color: var(--text);
+  font-size: .75vw;
+  text-transform: uppercase;
+}
+nav button:hover{
+  color: var(--primary);
+}
+
+
+
+
+h1{
+  font-family: 'Roboto', sans-serif;
+  font-size: xx-large;
+}
+
 .App {
   text-align: center;
+  overflow-x: hidden;
+  overflow-y: hidden;
+  width: fit-content;
+  scroll-snap-type: y proximity;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.heroText {
+  height: 70vh;
+  width: 99vw;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: start;
+  background-color: var(--background);
+  font-family: 'Roboto', sans-serif; 
+  text-align: left; 
+  padding-top: 15%; 
+  overflow-x: 0;
+}
+
+.hero_title{
+  background-color: #000000;
+  z-index: 2;
+  padding-left: 10%;
+}
+
+.heroText h1 {
+  color: var(--text);
+  font-size: 4vw; 
+  letter-spacing: .01vw;
+  margin-bottom: .1vw; 
+  background-color: #000000;
+  z-index: 2;
+}
+
+.heroText h2 {
+  color: var(--primary);
+  font-weight: 600;
+  font-size: 3vw; 
+  letter-spacing: -.02vw;
+  margin: .05vw 0; /* Add some margin to the h2 elements */
+}
+
+.hero_anim_contain{
+  animation: rotate 4s infinite linear;
+  transform-style: preserve-3d;
+  padding-left: 10%;
+  z-index: 1;
+}
+
+.hero_animated_text{
+      text-align: left;
+      width: 100%;
+}
+
+.hero_animated_text span{
+  position: relative;
+}
+
+.hero_animated_text span::before{
+  content: ' ';
+  animation: words 20s infinite linear;
+}
+
+@keyframes rotate{
+  0%{transform: rotate3d(1, 0, 0, 0deg);}
+  35%{transform: rotate3d(1, 0, 0, 0deg);}
+  35.001%{opacity: 0;} 
+  40%{opacity: 0;} 
+  40.0001%{visibility:hidden; transform: rotate3d(1, 0, 0, 70deg) translateY(2vw); opacity: 1;} 
+  42%{visibility:hidden; transform: rotate3d(1, 0, 0, 290deg) translateY(2vw);}
+  60%{visibility:hidden; transform: rotate3d(1, 0, 0, 290deg) translateY(2vw);}
+  70%{transform: rotate3d(1, 0, 0, 360deg);}
+  99.9999%{transform: rotate3d(1, 0, 0, 360deg);}
+  100%{transform: rotate3d(1, 0, 0, 0deg);}
+}
+
+@keyframes words{
+  0%{content: 'Developer';}
+  20%{content: 'Programmer';}
+  40%{content: 'Challenge Seeker';}
+  60%{content: 'Learner';}
+  80%{content: 'Team Focused';}
+  100%{content: 'Developer';}
+}
+
+
+.content_container{
+  background: var(--background);
+  background-image: url(grid-png-43575.png);
+  background-size: 25%;
+  overflow-x: hidden;
+  overflow-y: hidden;
+}
+
+.about{
+  position: relative;
+  overflow-x: hidden;
+  overflow-y: hidden;
+  display: flex;
+  width: 99vw;
+  height: 50vh;
+  padding-top: 5%;
+  padding-bottom: 5%;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.about_grid{
+  width: 60vw;
+  height: 26vw;
+  display: flex;
+  justify-content: space-evenly;
+  align-content: center;
+  background: rgba(255, 255, 255, 0.5);
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(2.3px);
+  -webkit-backdrop-filter: blur(1.3px);
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  border-radius: 1%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.about_profile_content{
+  width: 50%;
+  height: 100%;
+  display: flexbox;
 }
+
+.about_profile_card{
+
+  height: 100%;
+}
+
+.about_profile_card_picture{
+  filter: drop-shadow(0 0 .2rem rgba(156, 205, 248, 0.226));
+  position: relative; 
+  width: 16vw;
+  height: 16vw;
+  overflow: hidden; 
+  border-radius: 50%;
+  margin-top: 10%;
+  margin-bottom: 5%;
+}
+
+
+.about_profile_card_socials{
+  display: flex;
+  position: relative;
+  justify-content: center;
+  width: auto;
+  height: auto;
+  padding-bottom: 5%;
+}
+
+.about_profile_card_socials_linkedin{
+  width: 5vw;
+  height: 5vw;
+  font-size: smaller;
+
+}
+
+.about_profile_card_socials_github{
+  width: 5vw;
+  height: 5vw;
+  font-size: smaller;
+}
+
+.about_text_content{
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  width: 88%;
+  text-align: left;
+  align-content: end;
+}
+
+.about_text_content h1{
+  padding-left: 10%;
+  font-size: 2.4vw;
+  color: rgb(53, 66, 78);
+  text-indent: -5%;
+  margin-top: 5%;
+}
+
+.about_text_content h2{
+  padding-left: 5%;
+  font-size: 1.2vw;
+  padding-right: 5%;
+  color: rgb(0, 0, 0);
+}
+
+.projects_home{
+  height: fit-content;
+  width: 99vw;
+}
+
+.projects_home h1{
+  text-align: left;
+  font-size: 4vw;
+  font-weight: 100;
+  letter-spacing: 1vw;
+  padding-left: 9%;
+  padding-top: 2%;
+  color: var(--primary);
+}
+
+.projects_home_grid_outer{
+  display: flex;
+  width: 100%;
+  height: 90vh;
+  justify-content : center;
+  gap: 2%;
+}
+
+.project_showcase{
+  background-image: url(./calendarappphoto.png);
+  background-size: cover;
+  background-position-y: -.25vw;
+  width: 40%;
+  height: 50%;
+  border-radius: .5%;
+  display: flex;
+  align-items: flex-end;
+  justify-items: center;
+}
+
+.project_showcase_textbox{
+  background-color: #303b30;
+  box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.2);
+  backdrop-filter: blur(6.8px);
+  -webkit-backdrop-filter: blur(6.8px);
+  margin-bottom: -1.5%;
+  width: 100%;
+  height: fit-content;
+  display: flex;
+  align-items: end;
+}
+
+
+.project_showcase_textbox h2{
+  font-size: 2vw;
+  text-wrap: 0;
+  color: var(--text);
+  padding-left: 2%;
+}
+
+.projects_home_grid_sidebar{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 5%;
+  height: 50%;
+  width: 40%;
+}
+
+.project_sidebar1{
+  height: 25%;
+  width: 100%;
+  flex-grow: 1;
+  background-image: url('conservatory.png');
+  background-size: cover;
+  background-position-y: center;
+  background-position-x: 10vw;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, .5);
+  border-radius: 1%;
+  justify-content: center;
+}
+
+.project_sidebar2{
+  height: 25%;
+  width: 100%;
+  flex-grow: 1;
+  background-image: url('conservatory.png');
+  background-size: cover;
+  background-position-y: center;
+  background-position-x: 10vw;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, .5);
+  border-radius: 1%;
+  justify-content: center;
+}
+.project_sidebar3{
+  height: 25%;
+  width: 100%;
+  flex-grow: 1;
+  background-image: url('conservatory.png');
+  background-size: cover;
+  background-position-y: center;
+  background-position-x: 10vw;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, .5);
+  border-radius: 1%;
+}
+
+.projects_home_grid_sidebar h2{
+  color: var(--text);
+  font-size: 1.25vw;
+  margin-left: 3%;
+}
+
+.projects_home_grid_sidebar h3{
+  color: #88888879;
+  font-size: 1vw;
+  margin-left: 3%;
+  margin-top: -10%;
+}
+
+.project_sidebar_cover{
+  display: flex;
+  flex-grow: 1;
+  height: 100%;
+  width: 100%;
+  backdrop-filter: blur(.05vw);
+  -webkit-backdrop-filter: blur(.05vw);
+}
+
+.project_sidebar_text{
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  width: 50%;
+  background-color: #303b30;
+  box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.2);
+  backdrop-filter: blur(6.8px);
+  -webkit-backdrop-filter: blur(6.8px);
+  -webkit-clip-path: polygon(0 0, 70% 0, 100% 100%, 0% 100%);
+  clip-path: polygon(0 0, 70% 0, 100% 100%, 0% 100%);
+  margin-top: -.5%;
+  margin-left: -.2%;
+  border: .2vw solid rgba(54, 54, 54, 0.34);
+  align-items: start;
+  justify-content: space-around;
+
+}
+
