--- a/src/App.css
+++ b/src/App.css
@@ -9,18 +9,19 @@
 
 .light{
   background: rgb(255,255,255);
-  background: radial-gradient(circle, rgba(255,255,255,0.1) 0%, rgba(0,0,0,.8) 50%);
+  background: radial-gradient(circle, rgba(255, 249, 249, 0.1) 0%, rgba(0,0,0,.8) 50%);
   height: 99vh;
   width: 99vw;
   position: fixed;
   outline: auto;
-  z-index: 100;
+  z-index: 2;
 }
 
 nav{
   position: fixed;
   display: flex;
   align-items: center;
+  justify-items: center;
   padding-top: 1%;
   left: 1;
   height: 8vh;
@@ -42,6 +43,8 @@ nav h2{
   font-weight: 100;
   font-weight: bolder;
   letter-spacing: .09vw;
+  z-index: 100;
+  
 }
 
 .logo{
@@ -53,35 +56,33 @@ nav ul{
   display: flex;
   list-style: none;
   margin-left: 45%;
-  gap: .5vw;
+  gap: .6vw;
+  justify-items: center;
+  align-items: center;
 }
 
 nav button{
   border-radius:5%;
-  background: rgba(255, 255, 255, 0.21);
-  border-radius: 16px;
+  background: rgba(0, 0, 0, 0.21);
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
   backdrop-filter: blur(6.1px);
   -webkit-backdrop-filter: blur(6.1px);
-  border: 1px solid rgba(255, 255, 255, 0.36);
+  border: .5px solid rgba(255, 255, 255, 0.055);
   cursor:pointer;
   font-family:Arial;
   font-size:17px;
   text-decoration:none;
   text-shadow:0px 1px 0px #2f6627;
-  width: 5vw;
-  height: 1.5vw;
+  width: fit-content;
+  height: 2vw;
   color: var(--text);
-  font-size: .75vw;
+  font-size: 1vw;
   text-transform: uppercase;
 }
 nav button:hover{
-  color: var(--primary);
+  background: rgba(27, 53, 32, 0.603);
+  z-index: 100;
 }
-
-
-
-
 h1{
   font-family: 'Roboto', sans-serif;
   font-size: xx-large;
@@ -93,7 +94,9 @@ h1{
   overflow-y: hidden;
   width: fit-content;
   scroll-snap-type: y proximity;
+
 }
+
 
 .heroText {
   height: 70vh;
@@ -106,12 +109,14 @@ h1{
   text-align: left; 
   padding-top: 15%; 
   overflow-x: 0;
+  z-index: 99;
+  position: relative;
 }
 
 .hero_title{
   background-color: #000000;
-  z-index: 2;
   padding-left: 10%;
+  z-index: 6;
 }
 
 .heroText h1 {
@@ -120,7 +125,7 @@ h1{
   letter-spacing: .01vw;
   margin-bottom: .1vw; 
   background-color: #000000;
-  z-index: 2;
+  z-index: 6;
 }
 
 .heroText h2 {
@@ -128,19 +133,20 @@ h1{
   font-weight: 600;
   font-size: 3vw; 
   letter-spacing: -.02vw;
-  margin: .05vw 0; /* Add some margin to the h2 elements */
+  margin: .05vw 0; 
 }
 
 .hero_anim_contain{
   animation: rotate 4s infinite linear;
   transform-style: preserve-3d;
   padding-left: 10%;
-  z-index: 1;
+  z-index: 4;
 }
 
 .hero_animated_text{
       text-align: left;
       width: 100%;
+      z-index: 4;
 }
 
 .hero_animated_text span{
@@ -181,6 +187,7 @@ h1{
   background-size: 25%;
   overflow-x: hidden;
   overflow-y: hidden;
+  z-index: 1;
 }
 
 .about{
@@ -193,6 +200,7 @@ h1{
   padding-top: 5%;
   padding-bottom: 5%;
   justify-content: center;
+  z-index: 6;
 }
 
 .about_grid{
@@ -201,11 +209,11 @@ h1{
   display: flex;
   justify-content: space-evenly;
   align-content: center;
-  background: rgba(255, 255, 255, 0.5);
+  background: rgba(73, 71, 71, 0.5);
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
   backdrop-filter: blur(2.3px);
   -webkit-backdrop-filter: blur(1.3px);
-  border: 1px solid rgba(255, 255, 255, 0.3);
+  border: 1px solid rgba(61, 57, 57, 0.3);
   border-radius: 1%;
 }
 
@@ -216,12 +224,11 @@ h1{
 }
 
 .about_profile_card{
-
   height: 100%;
 }
 
 .about_profile_card_picture{
-  filter: drop-shadow(0 0 .2rem rgba(156, 205, 248, 0.226));
+  filter: drop-shadow(0 0 .1rem var(--primary));
   position: relative; 
   width: 16vw;
   height: 16vw;
@@ -236,6 +243,7 @@ h1{
   display: flex;
   position: relative;
   justify-content: center;
+  gap: 5%;
   width: auto;
   height: auto;
   padding-bottom: 5%;
@@ -245,13 +253,14 @@ h1{
   width: 5vw;
   height: 5vw;
   font-size: smaller;
-
+  filter: invert(48%) sepia(21%) saturate(561%) hue-rotate(56deg) brightness(97%) contrast(94%);
 }
 
 .about_profile_card_socials_github{
   width: 5vw;
   height: 5vw;
   font-size: smaller;
+  filter: invert(48%) sepia(21%) saturate(561%) hue-rotate(56deg) brightness(97%) contrast(94%);
 }
 
 .about_text_content{
@@ -266,7 +275,7 @@ h1{
 .about_text_content h1{
   padding-left: 10%;
   font-size: 2.4vw;
-  color: rgb(53, 66, 78);
+  color: var(--primary);
   text-indent: -5%;
   margin-top: 5%;
 }
@@ -275,22 +284,35 @@ h1{
   padding-left: 5%;
   font-size: 1.2vw;
   padding-right: 5%;
-  color: rgb(0, 0, 0);
+  color: var(--text);
+  letter-spacing: .1%;
 }
 
 .projects_home{
   height: fit-content;
   width: 99vw;
+  z-index: 6;
 }
 
 .projects_home h1{
+  width: fit-content;
+  position: relative;
   text-align: left;
   font-size: 4vw;
   font-weight: 100;
   letter-spacing: 1vw;
-  padding-left: 9%;
-  padding-top: 2%;
+  margin-left: 9%;
+  padding-left: 1%;
+  margin-top: 2%;
+  padding-top: .5%;
   color: var(--primary);
+  z-index: 6;
+  background: rgba(73, 71, 71, 0.5);
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(2.3px);
+  -webkit-backdrop-filter: blur(1.3px);
+  border: 1px solid rgba(61, 57, 57, 0.3);
+  border-radius: 1%;
 }
 
 .projects_home_grid_outer{
@@ -299,6 +321,7 @@ h1{
   height: 90vh;
   justify-content : center;
   gap: 2%;
+  z-index: 6;
 }
 
 .project_showcase{
@@ -311,6 +334,7 @@ h1{
   display: flex;
   align-items: flex-end;
   justify-items: center;
+  z-index: 6;
 }
 
 .project_showcase_textbox{
@@ -322,7 +346,14 @@ h1{
   width: 100%;
   height: fit-content;
   display: flex;
-  align-items: end;
+  flex-direction: column;
+  align-items: start;
+  z-index: 6;
+}
+
+.project_showcase:hover .project_showcase_textbox h3{
+ padding-bottom: 4%;
+ transition: padding-bottom .7s;
 }
 
 
@@ -330,7 +361,17 @@ h1{
   font-size: 2vw;
   text-wrap: 0;
   color: var(--text);
-  padding-left: 2%;
+  padding-left: 4%;
+  z-index: 6;
+}
+
+.project_showcase_textbox h3{
+  font-size: 1vw;
+  text-wrap: 0;
+  color: #88888879;
+  margin-top: -5%;
+  padding-left: 4%;
+  z-index: 6;
 }
 
 .projects_home_grid_sidebar{
@@ -340,43 +381,81 @@ h1{
   gap: 5%;
   height: 50%;
   width: 40%;
+  z-index: 6;
 }
 
 .project_sidebar1{
-  height: 25%;
+  height: 30%;
   width: 100%;
-  flex-grow: 1;
-  background-image: url('conservatory.png');
-  background-size: cover;
-  background-position-y: center;
-  background-position-x: 10vw;
+  display: flex;
+  background-color: #303b30;
   box-shadow: 0 4px 30px rgba(0, 0, 0, .5);
   border-radius: 1%;
-  justify-content: center;
+  justify-content: space-between;
 }
 
-.project_sidebar2{
-  height: 25%;
-  width: 100%;
-  flex-grow: 1;
+.project_sidebar1 .p_img{
+  width: 60%;
+  height: 100%;
   background-image: url('conservatory.png');
-  background-size: cover;
+  background-size: 200%;
   background-position-y: center;
-  background-position-x: 10vw;
-  box-shadow: 0 4px 30px rgba(0, 0, 0, .5);
-  border-radius: 1%;
-  justify-content: center;
+  background-position-x: -1vw;
+  clip-path: polygon(20% 0%, 100% 0, 100% 100%, 0% 100%);
 }
-.project_sidebar3{
-  height: 25%;
+
+.project_sidebar1:hover{
+  box-shadow: 0 0 .1vw .1vw var(--secondary);
+}
+
+.project_sidebar1:hover .p_img{
+  width: 80%;
+  height: 100%;
+  transition: width .7s;
+}
+
+@keyframes shadows {
+  0% { box-shadow: 0 0 10px 5px var(--text)}
+  50% { text-shadow: blueviolet 0 0 10px; }
+  75% { text-shadow: rebeccapurple 0 0 10px;}
+  100% { text-shadow: #48abe0 0 0 10px; }
+ }
+
+ .project_sidebar2{
+  height: 30%;
   width: 100%;
-  flex-grow: 1;
-  background-image: url('conservatory.png');
-  background-size: cover;
-  background-position-y: center;
-  background-position-x: 10vw;
+  display: flex;
+  background-color: #303b30;
   box-shadow: 0 4px 30px rgba(0, 0, 0, .5);
   border-radius: 1%;
+  justify-content: space-between;
+}
+
+.project_sidebar2 .p_img{
+  width: 60%;
+  height: 100%;
+  background-image: url('conservatory.png');
+  background-size: 200%;
+  background-position-y: center;
+  background-position-x: -1vw;
+  clip-path: polygon(20% 0%, 100% 0, 100% 100%, 0% 100%);
+}
+
+.project_sidebar2:hover{
+  box-shadow: 0 0 .1vw .1vw var(--secondary);
+}
+
+.project_sidebar2:hover .p_img{
+  width: 80%;
+  height: 100%;
+  transition: width .7s;
+}
+
+.project_sidebar3{
+  height: 30%;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
 }
 
 .projects_home_grid_sidebar h2{
@@ -389,34 +468,31 @@ h1{
   color: #88888879;
   font-size: 1vw;
   margin-left: 3%;
-  margin-top: -10%;
+  margin-top: -2%;
+  text-align: left;
+}
+
+.project_sidebar3 h2{
+  color: #88888879;
+  align-self: flex-end;
 }
 
 .project_sidebar_cover{
   display: flex;
   flex-grow: 1;
   height: 100%;
-  width: 100%;
-  backdrop-filter: blur(.05vw);
-  -webkit-backdrop-filter: blur(.05vw);
+  width: 120%;
+  flex-direction: row;
 }
 
 .project_sidebar_text{
   display: flex;
   flex-direction: column;
   height: 100%;
-  width: 50%;
-  background-color: #303b30;
-  box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.2);
-  backdrop-filter: blur(6.8px);
-  -webkit-backdrop-filter: blur(6.8px);
-  -webkit-clip-path: polygon(0 0, 70% 0, 100% 100%, 0% 100%);
-  clip-path: polygon(0 0, 70% 0, 100% 100%, 0% 100%);
-  margin-top: -.5%;
-  margin-left: -.2%;
-  border: .2vw solid rgba(54, 54, 54, 0.34);
+  width: 100%;
+  margin-top: -.5vw;
+  margin-left: -.2vw;
+  justify-content: center;
   align-items: start;
-  justify-content: space-around;
-
 }
 
