--- a/src/App.css
+++ b/src/App.css
@@ -567,8 +567,19 @@ h1{
 .contact_container a:hover{
   background: rgba(125, 134, 128, 0.5);
 }
-
-
 .contact_container a h2{
 margin-left: 0%;
+}
+
+/* Mobile-specific styles */
+@media (max-width: 768px) {
+  body {
+      font-size: 16px;
+  }
+  .container {
+      padding: 10px;
+  }
+
+
+  
 }
