--- a/src/App.css
+++ b/src/App.css
@@ -27,7 +27,7 @@ nav{
   justify-items: center;
   padding-top: 1%;
   left: 1;
-  height: 8vh;
+  height: 2vw;
   width: 99vw;
   z-index: 100;
   background: rgba(0, 0, 0, 0.21);
@@ -42,12 +42,12 @@ nav h2{
   color: var(--text);
   margin-left: 2%;
   text-align: left;
-  text-wrap: 1;
+  text-wrap: 0;
   font-weight: 100;
   font-weight: bolder;
   letter-spacing: .09vw;
   z-index: 100;
-  
+  width: 20vw;
 }
 
 .logo{
@@ -73,7 +73,7 @@ nav button{
   border: .5px solid rgba(255, 255, 255, 0.055);
   cursor:pointer;
   font-family:Arial;
-  font-size:17px;
+  font-size:1vw;
   text-decoration:none;
   text-shadow:0px 1px 0px #2f6627;
   width: fit-content;
@@ -103,7 +103,7 @@ h1{
 
 
 .heroText {
-  height: 70vh;
+  height: 35vw;
   width: 99vw;
   display: flex;
   flex-direction: column;
@@ -200,7 +200,7 @@ h1{
   overflow-y: hidden;
   display: flex;
   width: 99vw;
-  height: 50vh;
+  height: 35vw;
   padding-top: 5%;
   padding-bottom: 5%;
   justify-content: center;
@@ -334,7 +334,7 @@ h1{
 .projects_home_grid_outer{
   display: flex;
   width: 100%;
-  height: 90vh;
+  height: 50vw;
   justify-content : center;
   gap: 2%;
   z-index: 6;
@@ -518,7 +518,7 @@ h1{
   height: 35vw;
   width: 99vw;
   z-index: 6;
-  margin-top: 4%;
+  margin-top: 5%;
 }
 
 .contact_container h1{
@@ -573,13 +573,174 @@ margin-left: 0%;
 
 /* Mobile-specific styles */
 @media (max-width: 768px) {
-  body {
-      font-size: 16px;
-  }
-  .container {
-      padding: 10px;
+
+  nav{
+    height: 5vh;
   }
 
+  nav h2{
+    font-size: 3vw;
+  }
 
+  .logo{
+    margin-left: 2%;
+    height: 100%;
+  }
+ 
+  nav ul{
+    display: flex;
+    list-style: none;
+    margin-left: -3%;
+    gap: .2vw;
+    justify-items: center;
+    align-items: center;
+  }
+  
+  nav button{
+    font-size: 3vw;
+  }
+
+  .heroText{
+    height: 90vh;
+  }
+
+  .hero_title{
+    background-color: #000000;
+    padding-left: 10%;
+    padding-top: 50%;
+    z-index: 6;
+  }
+  
+  .heroText h1 {
+    font-size: 4vh; 
+  }
+  
+  .heroText h2 {
+    font-size: 3vh; 
+  }
+  
+  .about{
+    position: relative;
+    overflow-x: hidden;
+    overflow-y: hidden;
+    display: flex;
+    height: 95vh;
+    padding-top: 5%;
+    padding-bottom: 5%;
+    justify-content: center;
+    align-items: center;
+    z-index: 6;
+  }
+  
+  .about_grid{
+    width: 40vh;
+    height: 45vh;
+  }
+  
+  .about_profile_card{
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+  }
+  
+  .about_profile_card_picture{
+    width: 12vh;
+    height: 12vh;
+  }
+
+  .about_text_content h1{
+    padding-left: 10%;
+    font-size: 2.4vh;
+    color: var(--primary);
+    text-indent: -5%;
+    margin-top: 5%;
+  }
+  
+  .about_text_content h2{
+    padding-left: 5%;
+    font-size: 1.5vh;
+    padding-right: 5%;
+    color: var(--text);
+    letter-spacing: .1%;
+  }
+
+  .projects_home{
+    height: 99vh;
+  }
+
+  .projects_home h1{
+    font-size: 4vh;
+  }
+  
+  .projects_home_grid_outer{
+    width: 99vw;
+    height: 100%;
+    margin-top: -25vh;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .project_showcase{
+    width: 80%;
+    height: 20%;
+  }
+
+  .project_showcase_textbox{
+    height: 30%;
+    gap: 1vh;
+  }
+
+  .project_showcase_textbox h2{
+    font-size: 1.4vh;
+  }
+  .project_showcase_textbox h3{
+    font-size: 1.2vh;
+  }   
+
+  .projects_home_grid_sidebar{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 5%;
+    height: 20%;
+    width: 80%;
+    z-index: 6;
+  }
+
+  .project_sidebar1 h2{
+    font-size: 1vh;
+  }
+
+  .project_sidebar1 h3{
+    font-size: .8vh;
+  }
+
+  .project_sidebar2 h2{
+    font-size: 1vh;
+  }
+
+  .project_sidebar2 h3{
+    font-size: .8vh;
+  }
+
+  .contact_container{
+    margin-top: -20vh;
+    height: 40vh;
+    padding-bottom: 1vh;
+  }
+  .contact_container h1{
+    font-size: 4vh; 
+    margin-left: 1%;  
+  }
+  .contact_container h2{
+    margin-left: 1%;  
+  }
+  .contact_container a{
+    width: 40vh;
+    margin-left: 1%;
+  }
+  
   
 }
